--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -16,6 +16,7 @@
  }
  .signup-button {
     border: 1px #254f75 solid;
+    background: transparent;
  }
 </style>
 
@@ -140,10 +141,6 @@ textarea:hover {
   background: transparent;
   color: black;
 }
-#submit {
-  width: 70%;
-  background: transparent;
-}
 </style>
 
 <script type="text/javascript">
@@ -180,7 +177,7 @@ if ( !isemail(frm["fldEmail"].value) ) {
 </fieldset>
  </div>
  <div class="input">
-<fieldset><button type="submit" id="submit" krydebug="1751" class="button signup-button formbox-button-766318">Subscribe</button></fieldset></form>
+<fieldset><button type="submit" krydebug="1751" class="button signup-button formbox-button-766318">Subscribe</button></fieldset></form>
  </div>
  </div>
 </div>
