--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,17 +1,17 @@
 <style>
 .signup-name {
- border-bottom: 1px #254f75 solid;
+ border-top, border-right: 1px #254f75 solid;
+   border-bottom, border-right: 2px #254f75 solid;
+
  }
  .signup-email {
-  border-bottom: 1px #254f75 solid;
-  margin-left: 1em;
+ border-top, border-left: 1px #254f75 solid;
+  border-bottom, border-right: 2px #254f75 solid;
  }
  .signup {
-  display: inline-block;
   color: #191919;
  }
  .input {
-  display: inline;
    color: #191919;
  }
  .signup-button {
