--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,8 +1,18 @@
 <style>
+.signup-name {
+ border-bottom: 1px #254f75 solid;
+ margin-bottom: 0.75em;
+ }
+ .signup-email {
+  border-bottom: 1px #254f75 solid;
+  
+ }
  .signup {
+  display: inline-block;
   color: #191919;
  }
  .input {
+  display: inline;
    color: #191919;
  }
  .signup-button {
@@ -90,14 +100,14 @@ input {
   font-size: 0.875em;
   width: 470px;
   height: 50px;
-  padding: 0px 10px 0px 10px;
+  padding: 0px 15px 0px 15px;
   
   background: transparent;
   outline: none;
   color: #726659;
   
-  border-top, border-right: 1px #254f75 solid;
-   border-bottom, border-right: 2px #254f75 solid;
+  border: solid 1px #b3aca7;
+  border-bottom: none;
   
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -121,7 +131,7 @@ textarea {
   color: #726659;
   font-size: 0.875em;
   
-  
+  border: solid 1px #b3aca7;
   
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
