--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -4,6 +4,7 @@
     margin: auto auto;
   }
   input {
+    margin-top: 1em;
     background: transparent;
     padding: 10px 5px 10px 5px;
     border-top: 1px solid #254f75;
@@ -32,13 +33,13 @@
 <input type=hidden name=successurl value="http://www.benchmarkemail.com/Code/ThankYouOptin" />
 <input type=hidden name=errorurl value="http://lb.benchmarkemail.com//Code/Error" />
 <input type=hidden name=token value="mFcQnoBFKMTGH%2Fh2SGYGneZXUawFafLCUAjPvVSGy9cF7QYrl9KV0w%3D%3D" />
-<input type=hidden name=doubleoptin value="" /><fieldset><div class="signup-title"><h3>Backpackers Newsletter</h3></div></fieldset>
-<div class="input center-block">
- <fieldset class="signup center-block">
+<input type=hidden name=doubleoptin value="" /><fieldset><div class="signup-title"><h3 class="center">Backpackers Newsletter</h3></div></fieldset>
+<div class="input">
+ <fieldset >
 <input type=text placeholder="Your Name *" class="signup-name formbox-field-766318" id="name" name="fldfirstname" maxlength=100 />
 </fieldset>
  </div>
- <div class="center">
+ <div>
 <fieldset class="formbox-field-email-766318">
 <input type=text placeholder="Email Address *" class="signup-email formbox-field-766318" id="email" name="fldEmail" maxlength=100 />
 </fieldset>
