--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -4,7 +4,7 @@
     margin: auto auto;
   }
   input {
-    display: inline-block;
+    display: block;
     margin-top: 1em;
     background: transparent;
     padding: 10px 5px 10px 5px;
@@ -25,6 +25,7 @@
     background: transparent;
     padding: .75em 4em .75em 4em;
     color:  #254f75;
+    display: block;
   }
   
 </style>
