--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -3,8 +3,10 @@
     width: 80%;
     margin: auto auto;
   }
-  input {
+  .input {
     display: block;
+  }
+  input {
     margin-top: 1em;
     background: transparent;
     padding: 10px 5px 10px 5px;
@@ -36,11 +38,11 @@
 <input type=hidden name=errorurl value="http://lb.benchmarkemail.com//Code/Error" />
 <input type=hidden name=token value="mFcQnoBFKMTGH%2Fh2SGYGneZXUawFafLCUAjPvVSGy9cF7QYrl9KV0w%3D%3D" />
 <input type=hidden name=doubleoptin value="" /><div class="signup-title"><h3 class="center">Backpackers Newsletter</h3></div>
-<div class="input">
-<input type=text placeholder="Your Name *" class="signup-name formbox-field-766318" id="name" name="fldfirstname" maxlength=100 />
+<div class="input center">
+<input type=text placeholder="Your Name *" class="signup-name center" id="name" name="fldfirstname" maxlength=100 />
  </div>
  <div>
-<input type=text placeholder="Email Address *" class="signup-email formbox-field-766318" id="email" name="fldEmail" maxlength=100 />
+<input type=text placeholder="Email Address *" class="signup-email center formbox-field-766318" id="email" name="fldEmail" maxlength=100 />
  </div>
  <div class="input">
 <button type="submit" krydebug="1751" class="button signup-button">Subscribe</button></form>
