--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -2,9 +2,10 @@
   form {
     width: 80%;
     margin: auto auto;
+    display: flex;
+    flex-direction: column;
   }
   .input {
-    display: block;
   }
   input {
     margin-top: 1em;
@@ -28,23 +29,19 @@
     padding: .75em 4em .75em 4em;
     color:  #254f75;
     display: block;
+    max-width: 400px;
   }
   
 </style>
 
 
-<form class="center-block" action="https://lb.benchmarkemail.com//code/lbform" method=post name="frmLB766318" accept-charset="UTF-8" onsubmit="return _checkSubmit766318(this);" >
+<form class="center-block center" action="https://lb.benchmarkemail.com//code/lbform" method=post name="frmLB766318" accept-charset="UTF-8" onsubmit="return _checkSubmit766318(this);" >
 <input type=hidden name=successurl value="http://www.benchmarkemail.com/Code/ThankYouOptin" />
 <input type=hidden name=errorurl value="http://lb.benchmarkemail.com//Code/Error" />
 <input type=hidden name=token value="mFcQnoBFKMTGH%2Fh2SGYGneZXUawFafLCUAjPvVSGy9cF7QYrl9KV0w%3D%3D" />
 <input type=hidden name=doubleoptin value="" /><div class="signup-title"><h3 class="center">Backpackers Newsletter</h3></div>
-<div class="input center">
 <input type=text placeholder="Your Name *" class="signup-name center" id="name" name="fldfirstname" maxlength=100 />
- </div>
- <div>
 <input type=text placeholder="Email Address *" class="signup-email center formbox-field-766318" id="email" name="fldEmail" maxlength=100 />
- </div>
- <div class="input">
 <button type="submit" krydebug="1751" class="button signup-button">Subscribe</button></form>
 
 <script type="text/javascript">
