--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -2,10 +2,7 @@
   form {
     width: 80%;
     margin: auto auto;
-    display: flex;
-    flex-direction: column;
-  }
-  .input {
+    display: block;
   }
   input {
     margin-top: 1em;
@@ -15,8 +12,6 @@
     border-left: 1px solid #254f75;
     border-bottom: 1px solid #254f75;
     border-right: 1px solid #254f75;
-    width: 70%;
-    max-width: 400px;
   }
   textarea {
   padding: 15px;
@@ -29,21 +24,28 @@
     padding: .75em 4em .75em 4em;
     color:  #254f75;
     display: block;
-    max-width: 400px;
     margin-top: 1em;
   }
+  .input { list-style: none;}
   
 </style>
 
 
-<form class="center-block center" action="https://lb.benchmarkemail.com//code/lbform" method=post name="frmLB766318" accept-charset="UTF-8" onsubmit="return _checkSubmit766318(this);" >
+<form class="center-block form-group center" action="https://lb.benchmarkemail.com//code/lbform" method=post name="frmLB766318" accept-charset="UTF-8" onsubmit="return _checkSubmit766318(this);" >
 <input type=hidden name=successurl value="http://www.benchmarkemail.com/Code/ThankYouOptin" />
 <input type=hidden name=errorurl value="http://lb.benchmarkemail.com//Code/Error" />
 <input type=hidden name=token value="mFcQnoBFKMTGH%2Fh2SGYGneZXUawFafLCUAjPvVSGy9cF7QYrl9KV0w%3D%3D" />
 <input type=hidden name=doubleoptin value="" /><div class="signup-title"><h3 class="center">Backpackers Newsletter</h3></div>
+  <div class="row">
+    <div class="col-md-4">
 <input type=text placeholder="Your Name *" class="signup-name center" id="name" name="fldfirstname" maxlength=100 />
+    </div>    
+      <div class="col-md-4">
 <input type=text placeholder="Email Address *" class="signup-email center formbox-field-766318" id="email" name="fldEmail" maxlength=100 />
-<button type="submit" krydebug="1751" class="button signup-button center">Subscribe</button></form>
+    </div>
+        <div class="col-md-4">
+<button type="submit" krydebug="1751" class="button signup-button center">Subscribe</button>
+  </div></form>
 
 <script type="text/javascript">
 function CheckField766318(fldName, frm){ if ( frm[fldName].length ) { for ( var i = 0, l = frm[fldName].length; i < l; i++ ) {  if ( frm[fldName].type =='select-one' ) { if( frm[fldName][i].selected && i==0 && frm[fldName][i].value == '' ) { return false; }  if ( frm[fldName][i].selected ) { return true; } }  else { if ( frm[fldName][i].checked ) { return true; } }; } return false; } else { if ( frm[fldName].type == "checkbox" ) { return ( frm[fldName].checked ); } else if ( frm[fldName].type == "radio" ) { return ( frm[fldName].checked ); } else { frm[fldName].focus(); return (frm[fldName].value.length > 0); }} }
