--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -4,6 +4,9 @@
     margin: 0 auto;
     display: block;
   }
+  form div {
+    text-align: center;
+  }
   input {
     margin-top: 1em;
     display: block;
@@ -37,10 +40,15 @@
 <input type=hidden name=errorurl value="http://lb.benchmarkemail.com//Code/Error" />
 <input type=hidden name=token value="mFcQnoBFKMTGH%2Fh2SGYGneZXUawFafLCUAjPvVSGy9cF7QYrl9KV0w%3D%3D" />
 <input type=hidden name=doubleoptin value="" /><div class="signup-title"><h3 class="center">Backpackers Newsletter</h3></div>
+  <div>
 <input type=text placeholder="Your Name *" class="signup-name center" id="name" name="fldfirstname" maxlength=100 />
+  </div>
+  <div>
 <input type=text placeholder="Email Address *" class="signup-email center formbox-field-766318" id="email" name="fldEmail" maxlength=100 />
-    
+    </div>
+      <div>
 <button type="submit" krydebug="1751" class="button signup-button center">Subscribe</button>
+  </div>
   </form>
 
 <script type="text/javascript">
