--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,55 +1,81 @@
 <style>
-  form {
-    width: 80%;
-    margin: 0 auto;
-    display: block;
-  }
-  form div {
-    text-align: center;
-  }
-  input {
-    margin-top: 1em;
-    display: block;
-    background: transparent;
-    padding: 10px 5px 10px 5px;
-    border-top: 1px solid #254f75;
-    border-left: 1px solid #254f75;
-    border-bottom: 1px solid #254f75;
-    border-right: 1px solid #254f75;
-  }
-  textarea {
-  padding: 15px;
-  background: transparent;
-  outline: none;}
- 
-  .signup-button {
-    border: 1px solid #254f75;
-    background: transparent;
-    padding: .75em 4em .75em 4em;
-    color:  #254f75;
-    display: block;
-    margin-top: 1em;
-  }
-  .input { list-style: none;}
-  
+  #msform {
+	width: 400px;
+	margin: 50px auto;
+	text-align: center;
+	position: relative;
+}
+#msform fieldset {
+	background: white;
+	border: 0 none;
+	border-radius: 3px;
+	box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+	padding: 20px 30px;
+	box-sizing: border-box;
+	width: 80%;
+	margin: 0 10%;
+	
+	/*stacking fieldsets above each other*/
+	position: relative;
+}
+/*Hide all except first fieldset*/
+#msform fieldset:not(:first-of-type) {
+	display: none;
+}
+/*inputs*/
+#msform input, #msform textarea {
+	padding: 15px;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	margin-bottom: 10px;
+	width: 100%;
+	box-sizing: border-box;
+	font-family: montserrat;
+	color: #2C3E50;
+	font-size: 13px;
+}
+/*buttons*/
+#msform .action-button {
+	width: 100px;
+	background: #27AE60;
+	font-weight: bold;
+	color: white;
+	border: 0 none;
+	border-radius: 1px;
+	cursor: pointer;
+	padding: 10px 5px;
+	margin: 10px 5px;
+}
+#msform .action-button:hover, #msform .action-button:focus {
+	box-shadow: 0 0 0 2px white, 0 0 0 3px #27AE60;
+}
+/*headings*/
+.fs-title {
+	margin-bottom: 10px;
+}
+.fs-subtitle {
+	color: #666;
+	margin-bottom: 20px;
+}
 </style>
 
-
-<form class="center" action="https://lb.benchmarkemail.com//code/lbform" method=post name="frmLB766318" accept-charset="UTF-8" onsubmit="return _checkSubmit766318(this);" >
-<input type=hidden name=successurl value="http://www.benchmarkemail.com/Code/ThankYouOptin" />
+<!-- multistep form -->
+<form id="msform" action="https://lb.benchmarkemail.com//code/lbform" method=post name="frmLB766318" accept-charset="UTF-8" onsubmit="return _checkSubmit766318(this);" >
+  <!-- progressbar -->
+  
+  <!-- fieldsets -->
+  <fieldset>
+    <h3 class="fs-title">Backpackers newsletter</h3>
+    <h4 class="fs-subtitle">with fresh stories and images</h4>
+    <input type=hidden name=successurl value="http://www.benchmarkemail.com/Code/ThankYouOptin" />
 <input type=hidden name=errorurl value="http://lb.benchmarkemail.com//Code/Error" />
 <input type=hidden name=token value="mFcQnoBFKMTGH%2Fh2SGYGneZXUawFafLCUAjPvVSGy9cF7QYrl9KV0w%3D%3D" />
-<input type=hidden name=doubleoptin value="" /><div class="signup-title"><h3 class="center">Backpackers Newsletter</h3></div>
-  <div>
-<input type=text placeholder="Your Name *" class="signup-name center" id="name" name="fldfirstname" maxlength=100 />
-  </div>
-  <div>
+    <input type=text placeholder="Your Name *" class="signup-name center" id="name" name="fldfirstname" maxlength=100 />
 <input type=text placeholder="Email Address *" class="signup-email center formbox-field-766318" id="email" name="fldEmail" maxlength=100 />
-    </div>
-      <div>
-<button type="submit" krydebug="1751" class="button signup-button center">Subscribe</button>
-  </div>
+    <input type="button" name="next" class="next action-button" value="Sign up" />
+  </fieldset>
   </form>
+    
 
 <script type="text/javascript">
 function CheckField766318(fldName, frm){ if ( frm[fldName].length ) { for ( var i = 0, l = frm[fldName].length; i < l; i++ ) {  if ( frm[fldName].type =='select-one' ) { if( frm[fldName][i].selected && i==0 && frm[fldName][i].value == '' ) { return false; }  if ( frm[fldName][i].selected ) { return true; } }  else { if ( frm[fldName][i].checked ) { return true; } }; } return false; } else { if ( frm[fldName].type == "checkbox" ) { return ( frm[fldName].checked ); } else if ( frm[fldName].type == "radio" ) { return ( frm[fldName].checked ); } else { frm[fldName].focus(); return (frm[fldName].value.length > 0); }} }
