--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,6 +1,7 @@
 <style>
   #msform {
-	width: 400px;
+	width: 70%;
+  max-width: 600px;
 	margin: 50px auto;
 	text-align: center;
 	position: relative;
