--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -71,9 +71,10 @@
     <input type=hidden name=successurl value="http://www.benchmarkemail.com/Code/ThankYouOptin" />
 <input type=hidden name=errorurl value="http://lb.benchmarkemail.com//Code/Error" />
 <input type=hidden name=token value="mFcQnoBFKMTGH%2Fh2SGYGneZXUawFafLCUAjPvVSGy9cF7QYrl9KV0w%3D%3D" />
+	  <input type=hidden name=doubleoptin value="" />
     <input type=text placeholder="Your Name *" class="signup-name center" id="name" name="fldfirstname" maxlength=100 />
 <input type=text placeholder="Email Address *" class="signup-email center formbox-field-766318" id="email" name="fldEmail" maxlength=100 />
-    <input type="button" name="next" class="next action-button" value="Sign up" />
+<button type="submit" krydebug="1751" class="button signup-button center">Subscribe</button>
   </fieldset>
   </form>
     
