--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -58,6 +58,10 @@
 	color: #666;
 	margin-bottom: 20px;
 }
+	.signup-button {
+		border: 1px #254f75 solid;
+		color: #254f75;
+}
 </style>
 
 <!-- multistep form -->
