--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,7 +1,7 @@
 <style>
   #msform {
 	width: 70%;
-  max-width: 600px;
+  	max-width: 800px;
 	margin: 50px auto;
 	text-align: center;
 	position: relative;
@@ -59,8 +59,9 @@
 	margin-bottom: 20px;
 }
 	.signup-button {
-		border: 1px #254f75 solid;
-		color: #254f75;
+		border: 1px #66CDAA solid;
+		color: #336655;
+		background: transparent;
 }
 </style>
 
