--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,6 +1,6 @@
 <style>
   #msform {
-	width: 80%;
+	width: 90%;
   	max-width: 800px;
 	margin: 50px auto;
 	text-align: center;
@@ -62,6 +62,11 @@
 		border: 1px #66CDAA solid;
 		color: #336655;
 		background: transparent;
+}
+	.signup-button:hover {
+		border: 1px #66CDAA solid;
+		color: white;
+		background: #66CDAA;
 }
 </style>
 
