--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,8 @@
 layout: default
 ---
 <head>
-<meta name="geo.placename" content="{{ landmark }}, {{ page.categories }}">
+<meta name="geo.placename" content="{{ page.landmark }}, {{ page.categories }}">
 <link rel="stylesheet" href="/css/blueimp-gallery.css">
-<script src="/js/lazysizes.min.js"></script>
 </head>
 
 <div class="container-fluid postHeader" id="textover">
