--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@ layout: compress
     <!-- Custom styles for this template -->
     <link href="/css/main.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
+<script src="/js/lazysizes.min.js"></script>
   </head>
 
   <body>
