--- a/css/intro_white.css
+++ b/css/intro_white.css
@@ -1,25 +1,35 @@
-body {
-  background-image: url(/assets/intro_cover/cover_small.jpg);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  background-color: transparent;
-  background-color: transparent;
-    color: #f5f5f5;
+html, body {
+    margin:0;
+    padding:0;
+    height:100%
+}
+
+.intro {
+    width:100%;
+    height: 100%;
+    margin:auto;
+    background: url(/assets/intro_cover/cover_small.jpg) no-repeat 50% 50%;
+    background-size:cover;
+    text-align: center;
 }
 
 @media only screen and (min-width: 800px) {
-    body {
+    .intro {
     background: url(/assets/intro_cover/cover.jpg) no-repeat center center fixed; 
 }
 }
-
-.logo-main {
-    display: flex;
+	
+.center-flex {
+	display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+	}
+.logo-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   height: 100%;
   width: 100%;
 }
@@ -31,7 +41,20 @@ body {
 .logo-main a {
     padding: 0.25em 0.5em 0.25em 0.5em;
     color: #f5f5f5;
+    text-decoration:none;
+}
+.intro p {
+	color: #f5f5f5;
 }
 a:hover {
     color: #ff7373
+}
+.page {
+    width:80%;
+    margin:auto;
+}   
+.vertical {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
