--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@ layout: compress
 <meta name="keywords" content="{{ page.tags }}, backpacking, travel, adventure">
     <meta name="description" content="{{ page.description }}">
     <meta name="author" content="Jakub Velfl and Simon Tomanik">
+    <meta name="google-site-verification" content="OgIisZUI4FrlE0W53VA-pCEf88EQGOUEojK-SoCmISE" />
     <link rel="icon" href="/assets/icons/Yearinabackpack_logoblack_small.png">
 
     <title>{{ page.title }}</title>
