--- a/_includes/signup_test.html
+++ b/_includes/signup_test.html
@@ -86,8 +86,8 @@
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3aec4fe6e7ba7945856e9d0ec_b90a1162e5" tabindex="-1" value=""></div>
-    <input type=text placeholder="Your Name *" class="signup-name center" id="name" name="fldfirstname" maxlength=100 />
-<input type=text placeholder="Email Address *" class="signup-email center formbox-field-766318" id="email" name="fldEmail" maxlength=100 />
+    <input type=text placeholder="Your Name *" class="signup-name center" id="name" name="NAME" maxlength=100 />
+<input type=text placeholder="Email Address *" class="signup-email center formbox-field-766318" id="email" name="EMAIL" maxlength=100 />
 <button type="submit" krydebug="1751" class="button signup-button center">Subscribe</button>
   </fieldset>
   </form>
