--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,3 +1,3 @@
 <div class="video-container">
-    <iframe class="lazyload" data-src="https://www.youtube.com/embed/" frameborder="0" allowfullscreen></iframe>
+    <iframe class="lazyload" data-src="https://www.youtube.com/embed/{{ include.video-id }}" frameborder="0" allowfullscreen></iframe>
     </div>
