--- a/css/main.css
+++ b/css/main.css
@@ -210,7 +210,7 @@ a:hover {
 
 @media only screen and (min-width: 800px) {
     .postHeader {
-        max-height: 500px;
+        height: 500px;
         transition: ease;
         transition-duration: 1s;
     }
@@ -218,7 +218,7 @@ a:hover {
 
 @media only screen and (min-width: 1200px) {
     .postHeader {
-        max-height: 650px;
+        height: 650px;
         transition: ease;
         transition-duration: 1s;
     }
