--- a/_includes/post-info.html
+++ b/_includes/post-info.html
@@ -1,5 +1,6 @@
 <ul class="list-inline">
-	<li class="button author-button">{% assign author = site.authors[page.author] %}</li>
+	{% assign author = site.authors[page.author] %}
+	<li class="button author-button">{{ author.display_name }}</li>
 	<li class="button time-button">{{ page.date | date: "%-d %B %Y"}}</li>
   {% if post %}
     {% assign categories = post.categories %}
