--- a/_includes/post-info.html
+++ b/_includes/post-info.html
@@ -8,6 +8,7 @@
     {% assign categories = page.categories %}
   {% endif %}
   {% for category in categories %}
+  <li><a class="button country-button archive-title" href="{{site.url}}/countries/#{{category|slugize}}">{{ page.landmark }}</a></li>
   <li><a class="button country-button archive-title" href="{{site.url}}/countries/#{{category|slugize}}">{{category}}</a></li>
   {% unless forloop.last %}&nbsp;{% endunless %}
   {% endfor %}
