Mr Hyde was here …

--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -71,37 +71,27 @@
 </style>
 
 <!-- multistep form -->
-<form id="msform" action="https://lb.benchmarkemail.com//code/lbform" method=post name="frmLB766318" accept-charset="UTF-8" onsubmit="return _checkSubmit766318(this);" >
-  <!-- progressbar -->
+<form id="msform" action="//yearinabackpack.us14.list-manage.com/subscribe/post?u=3aec4fe6e7ba7945856e9d0ec&amp;id=b90a1162e5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
   
   <!-- fieldsets -->
   <fieldset>
     <h3 class="fs-title">Backpackers newsletter</h3>
     <h4 class="fs-subtitle">with fresh stories and images</h4>
-    <input type=hidden name=successurl value="http://www.benchmarkemail.com/Code/ThankYouOptin" />
-<input type=hidden name=errorurl value="http://lb.benchmarkemail.com//Code/Error" />
-<input type=hidden name=token value="mFcQnoBFKMTGH%2Fh2SGYGneZXUawFafLCUAjPvVSGy9cF7QYrl9KV0w%3D%3D" />
-	  <input type=hidden name=doubleoptin value="" />
-    <input type=text placeholder="Your Name *" class="signup-name center" id="name" name="fldfirstname" maxlength=100 />
-<input type=text placeholder="Email Address *" class="signup-email center formbox-field-766318" id="email" name="fldEmail" maxlength=100 />
+   
+    <input type=text placeholder="Your Name *" class="signup-name center" id="name" name="NAME" maxlength=100 />
+<input type=text placeholder="Email Address *" class="signup-email center formbox-field-766318" id="email" name="EMAIL" maxlength=100 />
 <button type="submit" krydebug="1751" class="button signup-button center">Subscribe</button>
   </fieldset>
-  </form>
-    
+	 <div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
 
-<script type="text/javascript">
-function CheckField766318(fldName, frm){ if ( frm[fldName].length ) { for ( var i = 0, l = frm[fldName].length; i < l; i++ ) {  if ( frm[fldName].type =='select-one' ) { if( frm[fldName][i].selected && i==0 && frm[fldName][i].value == '' ) { return false; }  if ( frm[fldName][i].selected ) { return true; } }  else { if ( frm[fldName][i].checked ) { return true; } }; } return false; } else { if ( frm[fldName].type == "checkbox" ) { return ( frm[fldName].checked ); } else if ( frm[fldName].type == "radio" ) { return ( frm[fldName].checked ); } else { frm[fldName].focus(); return (frm[fldName].value.length > 0); }} }
-function rmspaces(x) {var leftx = 0;var rightx = x.length -1;while ( x.charAt(leftx) == ' ') { leftx++; }while ( x.charAt(rightx) == ' ') { --rightx; }var q = x.substr(leftx,rightx-leftx + 1);if ( (leftx == x.length) && (rightx == -1) ) { q =''; } return(q); }
-function checkfield(data) {if (rmspaces(data) == ""){return false;}else {return true;}}
-function isemail(data) {var flag = false;if (  data.indexOf("@",0)  == -1 || data.indexOf("\\",0)  != -1 ||data.indexOf("/",0)  != -1 ||!checkfield(data) ||  data.indexOf(".",0)  == -1  ||  data.indexOf("@")  == 0 ||data.lastIndexOf(".") < data.lastIndexOf("@") ||data.lastIndexOf(".") == (data.length - 1)   ||data.lastIndexOf("@") !=   data.indexOf("@") ||data.indexOf(",",0)  != -1 ||data.indexOf(":",0)  != -1 ||data.indexOf(";",0)  != -1  ) {return flag;} else {var temp = rmspaces(data);if (temp.indexOf(' ',0) != -1) { flag = true; }var d3 = temp.lastIndexOf('.') + 4;var d4 = temp.substring(0,d3);var e2 = temp.length  -  temp.lastIndexOf('.')  - 1;var i1 = temp.indexOf('@');if (  (temp.charAt(i1+1) == '.') || ( e2 < 1 ) ) { flag = true; }return !flag;}}
-function _checkSubmit766318(frm){
-if ( !CheckField766318("fldfirstname", frm) ) { 
-   alert("Please enter the First Name");
-   return false;
-}
-if ( !isemail(frm["fldEmail"].value) ) { 
-   alert("Please enter the Email Address");
-   return false;
-}
- return true; }
-</script>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3aec4fe6e7ba7945856e9d0ec_b90a1162e5" tabindex="-1" value=""></div>
+  </form>
+
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+
+
