--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -10,10 +10,10 @@ layout: default
     <h2>{{ page.title }}</h2>
     {% include post-info.html %}
     <hr>
+<div>
     {{ content }}
-    {% include sharer.html %}
 </div>
-
+    {% include sharer.html %}
 </div>
 
     <div class="next-article center">Read next</div>
