--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,7 @@ layout: default
     {% for image in site.static_files %}
     {% if image.path contains page.img and image.path contains 'lead' %}
     {% unless image.path contains 'thumbnail' %}
+<noscript><img src="{{ site.baseurl }}{{ image.path }}" /></noscript>
         <img class="img-responsive lazyload blur-up" src="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}" data-src="{{ site.baseurl }}{{ image.path }}"  alt="{{ page.title }}">
     {% endunless %}
     {% endif %}   
