--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@ layout: compress
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="keywords" content="{{ page.tags }}, backpacking, travel, adventure">
+<meta name="keywords" content="{{ page.tags | sort | join: ", " }}, backpacking, travel, adventure">
     <meta name="description" content="{{ page.description }}">
     <meta name="author" content="Jakub Velfl and Simon Tomanik">
     <meta name="google-site-verification" content="OgIisZUI4FrlE0W53VA-pCEf88EQGOUEojK-SoCmISE" />
