--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,7 @@ layout: compress
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-{% for tag in page.tags %}
-<meta name="keywords" content="{{ tag | sort | join: ", " }}, backpacking, travel, adventure">
-{% endfor %}
+<meta name="keywords" content="{{ page.tags | join: ', ' }}, backpacking, travel, adventure">
     <meta name="description" content="{{ page.description }}">
     <meta name="author" content="Jakub Velfl and Simon Tomanik">
     <meta name="google-site-verification" content="OgIisZUI4FrlE0W53VA-pCEf88EQGOUEojK-SoCmISE" />
