Mr Hyde was here …

--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -11,7 +11,6 @@ layout: default
 <div class="container-post">   
     <h2 itemprop="name headline" >{{ page.title }}</h2>
     {% include post-info.html %}
-    <hr> 
 </div>
 
 
@@ -39,7 +38,9 @@ layout: default
 </div>
 </div>
 
+<div class="container-post">
 {% include sharer.html %}
+</div>
 
     <div class="next-article center">Read next</div>
 <div class="pageNavigation center">
