Mr Hyde was here …

--- a/css/main.css
+++ b/css/main.css
@@ -192,6 +192,9 @@ a:hover {
     max-width: 80%;
     word-wrap: normal;
 }
+.getPadding {
+   padding: 0.5em 0.5em 0.5em 0.5em
+}
 .postHeader {
     width: 100%;
     overflow: hidden;
