Mr Hyde was here …

--- a/_layouts/container.html
+++ b/_layouts/container.html
@@ -8,8 +8,8 @@ layout: compress
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="keywords" content="{{ page.tags }}, backpacking, travel, adventure">
-    <meta name="description" content="{{ page.description }}">
+<meta property="og:keywords" name="keywords" content="{{ page.tags }}, backpacking, travel, adventure">
+    <meta property="og:description" name="description" content="{{ page.description }}">
     <meta name="author" content="Jakub Velfl and Simon Tomanik">
     <meta name="google-site-verification" content="OgIisZUI4FrlE0W53VA-pCEf88EQGOUEojK-SoCmISE" />
     <link rel="icon" href="/assets/icons/YIAB_logo_black_extrasmall.png">
