--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,10 @@ layout: compress
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="keywords" content="{{ page.tags | join: ', ' }}, backpacking, travel, adventure">
-    <meta name="description" content="{{ page.description }}">
-    <meta name="author" content="Jakub Velfl and Simon Tomanik">
+<meta property="og:keywords" name="keywords" content="{{ page.tags | join: ', ' }}, backpacking, travel, adventure">
+    <meta property="og:description" name="description" content="{{ page.description }}"
+    <meta name=“Copyright” content=“Copyright Jakub Velfl 2017. All rights reserved.”>
+    <meta name="author" content="Jakub Velfl">
     <meta name="google-site-verification" content="OgIisZUI4FrlE0W53VA-pCEf88EQGOUEojK-SoCmISE" />
     <link rel="icon" href="/assets/icons/YIAB_logo_black_extrasmall.png">
 
